# fainder-demo

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  optimization_design.md  pyproject.toml  todos.md
.github/workflows/: backend_tests.yml  test.yml
analysis/: README.MD
analysis/fainder_filter_breaking_points_tests/: README.md  analysis.ipynb  conftest.py  fainder_filter_breaking_points_test.py  test_number_of_results.py
analysis/fainder_filter_performance_tests/: README.md  analysis.ipynb  conftest.py  fainder_filter_performance_test.py
analysis/fainder_results_size/: README.md  analysis.ipynb  run.py
analysis/filter_performance_tests/: conftest.py  fainder_filter_performance_test.py  hnsw_filter_performance_test.py  lucene_filter_performance_test.py
analysis/hnsw_filter_performance_tests/: analysis.ipynb  conftest.py  hnsw_filter_performance_test.py
analysis/keyword_merging_tests/: README.md  analysis.ipynb  conftest.py  generate_keyword_test_cases.py  keyword_merging_test.py
analysis/keyword_tests/: comparison_test.py
analysis/old/: lucene_filter_performance_test.py
analysis/performance_tests/: README.md  analysis.ipynb  analysis_optimizer.ipynb  analysis_with_num_workers.ipynb  comparions_analysis _multiple_sources.ipynb  config_models.py  conftest.py  constants.py  eval_performance_test.py  generate_eval_test_cases.py  regression_analysis.ipynb  run.py  run_experiment.sh
analysis/performance_tests/conf/: config.yaml
analysis/performance_tests/conf/engines/: default.yaml  parallel_prefiltering_engine.yaml  parralel_engine.yaml
analysis/performance_tests/conf/experiment/: all.yaml  base.yaml  base_keyword_queries_with_multiple_elements.yaml  default.yaml  early_exit.yaml  filtering.yaml  middle_exit.yaml  multiple_percentile_combinations.yaml  not.yaml  percentiles.yaml
analysis/performance_tests/conf/fainder/: default.yaml  no_parallel.yaml
analysis/performance_tests/conf/keywords/: default.yaml
analysis/performance_tests/conf/optimizer/: all_of.yaml  default.yaml  no_cost_sorting.yaml  no_kw_merging.yaml  no_split_up_junctions.yaml
analysis/performance_tests/conf/percentiles/: bigger.yaml  (+1 more)
analysis/visualize_trees/: README.md  visualize_trees.py
analysis/visualize_trees/edited_trees/: parse_tree_query_example_for_read_write_groups_with_leaves.dot  parse_tree_query_justifying_column_node_rule_with_leaves.dot
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/backend/: app_state.py  column_index.py  column_search.py  config.py  croissant_store.py  fainder_index.py  grammar.py  indexing.py  lucene_connector.py  main.py  percentile_grammar.py  query_evaluator.py  search.py  server.py  tantivy_index.py  util.py  utils.py
backend/backend/engine/: __init__.py  constants.py  conversion.py  engine.py  executor.py  optimizer.py  parser.py
backend/backend/engine/execution/: common.py  executor.py  factory.py  prefiltering_executor.py  simple_executor.py  threaded_executor.py  threaded_prefiltering_executor.py
backend/backend/engine/executor/: executor.py  helper.py  parallel_prefiltering_executor.py  prefiltering_executor.py  simple_executor.py  threaded_executor.py
backend/backend/indices/: __init__.py  keyword_op.py  name_op.py  percentile_op.py
backend/backend/proto/: keyword_query_pb2.py  keyword_query_pb2.pyi  keyword_query_pb2_grpc.py  keyword_query_pb2_grpc.pyi  lucene_connector_pb2.py  lucene_connector_pb2.pyi  lucene_connector_pb2_grpc.py  lucene_connector_pb2_grpc.pyi
backend/backend/scripts/: analyze_index.ipynb  generate_indices.py
backend/backend/tests/: test_grammar.py
backend/performance_tests/: analysis.ipynb  conftest.py  constants.py  eval_performance_test.py  generate_eval_test_cases.py
backend/proto/backend/proto/: keyword_query.proto  lucene_connector.proto
backend/scripts/: analyze_index.ipynb  generate_indices.py  histograms.py
backend/tests/: conftest.py  evaluation_test.py  grammar_correctness_test.py  grammar_validation_test.py  new_grammar_correctness_test.py  new_grammar_validation_test.py  parsing_test.py  test_evaluator.py  test_executor.py  test_highlighter.py  test_highlighting.py  test_optimizer.py  test_parser.py  testing_data.py
backend/tests/assets/: test_cases.py  test_cases_executor.py  test_cases_highlighting.py  test_cases_higlighter.py  test_cases_optimizer.py
backend/tests/assets/toy_collection/: metadata.json
backend/tests/assets/toy_collection/croissant/: heidarmirhajisadati&germany-city-rainfall-data.json  heidarmirhajisadati_germany-city-rainfall-data.json  smokingkrils&avacado-price-prediction.json  smokingkrils_avacado-price-prediction.json  tmdb&tmdb-movie-metadata.json  tmdb_tmdb-movie-metadata.json
backend/tests/assets/toy_collection/fainder/: conversion.zst  conversion_small.zst  histograms.zst  rebinning.zst  rebinning_small.zst
backend/tests/assets/toy_collection/lucene/: _0.cfe  _0.cfs  _0.si  segments_1
backend/tests/assets/toy_collection/tantivy/: .managed.json  meta.json
backend/typings/: hnswlib.pyi
docs/: optimization_design.md  remote_backend_setup.md  remote_machines.md  schema_specification.md  use_cases.md
fainder_demo/: README.MD  config.py  histograms.py  percentile_grammar.py  server.py  utils.py
fainder_demo/tests/: grammar_validation_test.py  new_grammar_validation_test.py
lucene/: Dockerfile  pom.xml
lucene/src/: JsonFileFinder.java  LuceneIndexer.java  LuceneSearch.java  LuceneServer.java
scripts/: generate_proto.sh  install.sh  run.sh  setup.sh
ui/: .dockerignore  Dockerfile  README.md  app.vue  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json  vitest.config.ts
ui/components/: FainderLogo.vue  Logo.vue  SearchComponent.css  SearchComponent.vue  Search_Component.vue  Wordmark.vue
ui/composables/: useSearchOperations.ts  useSearchState.ts
ui/pages/: index.vue
ui/pages/about/: index.vue
ui/pages/results/: index.css  index.vue
ui/pages/upload/: index.vue
ui/plugins/: vuetify.ts
ui/test/: parser.test.ts
ui/types/: types.ts
ui/utils/: queryParser.ts
(+17 files in other folders)
