[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[project]
name = "fainder-demo"
dynamic = ["version", "readme"]
description = " A search engine for text and distribution-aware dataset search."
requires-python = ">=3.10, <3.13"
license = {file = "LICENSE"}
authors = [
    {name = "Lennart Behme", email = "lennart.behme@tu-berlin.de"},
    {name = "Leonard Geißler", email = "l.geissler@tu-berlin.de"}
]
keywords = ["data discovery", "dataset search", "distribution-aware", "percentile predicate"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fainder@git+https://github.com/lbhm/fainder@main",
    "lark",
    "fastapi[standard]",
    "parameterized",
    "kaggle",
    "pytest",
]

[project.optional-dependencies]
dev = [
    "mypy~=1.13",
    "pre-commit~=4.0",
]

[project.urls]
Repository = "https://github.com/lbhm/fainder-demo"

[tool.setuptools.package-dir]
fainder-demo = "fainder_demo"

[tool.setuptools.dynamic]
version = {attr = "fainder_demo.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = [
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "ISC",  # flake8-implicit-str-concat
    "N",  # pep8-naming
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    "RUF",  # ruff-specific rules
    "SIM",  # flake8-simplify
    "UP",  # pyupgrade
    "W",  # pycodestyle warnings
]
ignore = [
    "C90",  # mccabe
    "D",  # pydocstyle
    "ISC001",  # single-line-implicit-string-concatenation
    "PL",  # pylint
    "PT",  # flake8-pytest-style
    "S",  # flake8-bandit
    "UP015",  # redundant-open-modes
]

[tool.mypy]
ignore_missing_imports = true
plugins = ["numpy.typing.mypy_plugin"]
strict = true
warn_unused_ignores = false
