[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend"
dynamic = ["version"]
description = "A search engine for text and distribution-aware dataset search."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Lennart Behme", email = "lennart.behme@tu-berlin.de" },
    { name = "Leonard Geißler", email = "l.geissler@tu-berlin.de" },
]
keywords = [
    "data discovery",
    "dataset search",
    "distribution-aware",
    "percentile predicate",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fainder@git+https://github.com/lbhm/fainder@demo",
    "fastapi[standard]~=0.115.6",
    "hnswlib~=0.8.0",
    "lark[interegular]~=1.2",
    "loguru~=0.7.3",
    "numpy~=2.0",
    "orjson~=3.10",
    "pydantic~=2.10",
    "pydantic-settings~=2.7",
    "sentence-transformers~=4.0",
    "tantivy~=0.24.0",
    "torch~=2.0",
]

[project.urls]
Repository = "https://github.com/lbhm/fainder-demo"

[project.scripts]
parse-dql = "backend.engine.parser:main"

[dependency-groups]
dev = [
    "mypy~=1.13",
    "pre-commit~=4.0",
    "pytest~=8.3",
    "pytest-cov~=6.0",
    "types-hnswlib~=0.8.0",
]

[tool.hatch.version]
path = "backend/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "COM",   # flake8-commas
    "C4",    # flake8-comprehensions
    "C90",   # mccabe
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "FAST",  # FastAPI rules
    "FURB",  # refurb
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "ISC",   # flake8-implicit-str-concat
    "N",     # pep8-naming
    "NPY",   # Numpy checks
    "PERF",  # perflint
    "PIE",   # flake8-pie
    "PL",    # pylint
    "PT",    # flake8-pytest-style
    "PTH",   # flake8-use-pathlib
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "RUF",   # ruff-specific rules
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "TC",    # flake8-typing-checking
    "UP",    # pyupgrade
    "W",     # pycodestyle warnings
]
ignore = [
    "COM812", # missing-trailing-comma
    "D",      # pydocstyle
    "EM",     # flake8-errmsg
    "PLR",    # pylint refactoring
    "S101",   # assert (needed for pytest)
]

[tool.pyright]
include = ["backend", "tests"]
# reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.mypy]
files = ["backend", "tests"]
strict = true
plugins = ["numpy.typing.mypy_plugin"]
